Added more GUI code and worker downloads

--- a/views/include/dashboard.html
+++ b/views/include/dashboard.html
@@ -5,5 +5,7 @@
 </section>
 
 <section class="content">
-	<dashboard-info-box info="box" ng-repeat="box in boxes track by $index">
+	<dashboard-info-box info="box" ng-repeat="box in boxes track by $index"></dashboard-info-box>
+	<h2 class="page-header">Workers</h2>
+	<dashboard-worker info="worker" ng-repeat="worker in workers"></dashboard-worker>
 </section>
